Added better theme switching soloution. Fixed issues with transparent navigation, now supports trnasparent company bars

--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -9,6 +9,7 @@
     },
     "components.js": {
       "files": [
+        "scripts/atomic/main.js",
         "styles/molecules/cards/cards.js",
         "styles/templates/side-nav.js",
         "scripts/atomic/m-dropdown.js"
